# klondike

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  turbo.json  typescript.json
crates/card/: Cargo.toml  README.md  card.rs  color.rs  deck.rs  error.rs  lib.rs  rank.rs  suit.rs  test.rs
crates/card-wasm/: Cargo.toml  README.md  build.sh  lib.rs  test.js
crates/enum-map/: Cargo.toml  README.md  lib.rs  test.rs
crates/enum-trait/: Cargo.toml  README.md  lib.rs  test.rs
crates/enum-trait-derive/: Cargo.toml  README.md  lib.rs
crates/klondike/: Cargo.toml  README.md  foundation.rs  lib.rs  stock.rs  tableau.rs
crates/klondike-cli/: Cargo.toml  README.md  main.rs
crates/klondike/old/: game.rs  lib.rs  notation.rs
learn-wasm/: Cargo.toml  learn-wasm.wasm  lib.rs
src/: card.rs  deck.rs  game.rs  lib.rs  main.rs
